# coding-nature

./: .gitignore  README.md  package-lock.json  package.json  tsconfig.json
amplify/: team-provider-info.json
amplify/.config/: project-config.json
amplify/backend/hosting/S3AndCloudFront/: parameters.json
lib/: Cargo.toml
lib/src/: lib.rs
lib/src/math/: mod.rs  vec3d.rs
lib/src/simulations/: flocking.rs  mod.rs
src/: App.css  App.tsx  index.tsx  vendor.d.ts
src/sketches/simulations/: utils.ts
src/sketches/simulations/flocking/: boid.ts  index.tsx  types.ts
src/sketches/simulations/flocking/js/: boid.ts  flock.ts
src/sketches/simulations/flocking/wasm/: boid.ts  flock.ts
